--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sequelize-cli": "^6.5.1"
   },
   "devDependencies": {
+    "bcrypt": "^5.1.0",
     "jest": "^29.2.0",
     "nodemon": "^2.0.20"
   }
